# personalizedagent

./: .gitignore  main.py
.cursor/plans/: platform-eaaaa7e1.plan.md
.cursor/rules/: personalagentrules.mdc
Backend/: main.py  pyproject.toml
Backend/app/: __init__.py  main.py
Backend/app/api/: __init__.py  deps.py
Backend/app/api/routers/: __init__.py  goals.py  health.py
Backend/app/core/: config.py  logging.py
Backend/app/db/: session.py
Backend/app/models/: __init__.py  base.py  goal.py  lesson.py  reflection.py  task.py  user.py
Backend/app/schemas/: goal.py  reflection.py  task.py  user.py
Backend/app/services/: goal_service.py
Backend/test/: Agentwork.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AboutMe.tsx  ContentDisplay.tsx  Sidebar.tsx
frontend/components/ui/: GlassPanel.tsx  MetricCard.tsx
frontend/lib/: mockData.ts
personalizedagent/: SpecIntro.md
