[project]
name = "personalizedagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "greenlet>=3.2.4",
    "openai-agents>=0.3.2",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.24",
    "structlog>=24.4.0",
    "uvicorn>=0.30.0",
]
